# security-buddy

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
apps/api/: .env.example  .gitignore  .importlinter  README.md  alembic.ini  pyproject.toml  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_core_schema.py  0003_seed_attack_taxonomy.py  0004_seed_target_manifest.py  0005_patches_indexes.py  0006_campaign_mode.py  0007_regression_offending_commit.py  0008_vulnerabilities_notes.py  0009_full_rubric_snapshot.py  0010_happy_path_fixtures.py  0011_seed_happy_path_fixtures.py  0012_patch_attempt_number.py  0013_vulnerabilities_response_shape.py  0014_verdicts_data_disclosed.py
apps/api/src/: main.py  settings.py
apps/api/src/agents/: __init__.py
apps/api/src/agents/documentation/: __init__.py  document.py  framework_lookup.py  graph.py  model.py  parse.py  prompt.py  rubric_snapshot.py  schema.py  severity.py  template.py
apps/api/src/agents/judge/: __init__.py  graph.py  judge.py  model.py  parse.py  prompt.py  rubric.py  schema.py
apps/api/src/db/: engine.py
apps/api/src/domain/: attack.py  campaign.py  coverage.py  errors.py  happy_path_fixture.py  patch.py  regression_run.py  target_manifest.py  target_version.py  verdict.py  vulnerability.py
apps/api/src/harness/: __init__.py  aggregate.py  replay.py  runner.py
apps/api/src/llm_client/: __init__.py  client.py  pricing.py  redaction.py  types.py
apps/api/src/observability/: __init__.py  context.py  events.py  metrics.py  middleware.py
apps/api/src/repositories/: __init__.py  agent_traces.py  attack_taxonomy.py  attacks.py  campaigns.py  coverage.py  happy_path_fixtures.py  patches.py  regression_runs.py  target_manifests.py  target_versions.py  verdicts.py  vulnerabilities.py
apps/api/src/routes/: campaigns.py  health.py  patches.py  taxonomy.py  vulnerabilities.py  webhooks.py
apps/api/src/workers/: __init__.py  documentation_worker.py  harness_worker.py  judge_worker.py  orchestrator_worker.py  patch_retry_worker.py  patch_worker.py  queue.py  red_team_worker.py  wide_sweep_worker.py
apps/api/tests/: conftest.py
apps/api/tests/evals/: documentation_fixtures.jsonl  judge_ground_truth.jsonl  red_team_ground_truth.jsonl  red_team_scoring.py  run_documentation_eval.py  run_judge_eval.py  run_red_team_eval.py
apps/api/tests/integration/: test_campaign_halt.py  test_coverage_repository.py  test_healthz.py  test_red_team_end_to_end.py  test_red_team_judge_enqueue.py  test_repositories.py  test_verdicts_repository.py
apps/api/tests/unit/: test_import_boundaries.py  test_orphan_sweep.py  test_pricing.py  test_redaction.py  test_repo_happy_path_fixtures.py  test_repo_vulnerabilities_append_note.py  test_repo_vulnerabilities_variant_merge.py  test_request_id.py  test_rerun_vuln_brief.py  test_routes_campaigns.py  test_routes_orchestrator.py  test_routes_vulnerabilities.py  test_settings.py  test_webhooks_commit_sha.py  test_wide_sweep.py
(+161 files in other folders)
