[project]
name = "security-buddy-api"
version = "0.1.0"
description = "Security Buddy — adversarial evaluation platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "arq>=0.26",
    "httpx>=0.27",
    "nh3>=0.2",
    "slowapi>=0.1.9",
    "langsmith>=0.1.50",
    "langgraph>=0.2",
    "prometheus-client>=0.20",
    "redis[hiredis]>=5.0",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0",
    "starlette>=0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "import-linter>=2.1",
    "types-redis>=4.6",
    "anyio>=4",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "RUF", # ruff-specific
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "S101",   # Use of assert (needed in tests)
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PT", "E501", "S105", "S106", "S107"]
# The eval runner embeds long-form ground-truth manifest strings and shells
# out to `git rev-parse` for the results filename — both are intentional and
# scope-narrow to this script.
"tests/evals/run_judge_eval.py" = ["E501", "S603", "S607"]
"tests/evals/run_documentation_eval.py" = ["E501", "S603", "S607"]
"tests/evals/run_red_team_eval.py" = ["E501", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["langsmith.*", "langgraph.*", "arq.*", "nh3.*", "slowapi.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: LLM evals (slow, costs money) — run with: pytest tests/evals --eval",
    "integration: Integration tests that require Postgres and Redis",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "import-linter>=2.11",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "types-redis>=4.6.0.20241004",
]
